# v7besm

./: .gitignore  CLAUDE.md  CMakeLists.txt  COPYRIGHT  Makefile  README.md
cmd/: TODO.md
cmd/ar/: CMakeLists.txt  ar.c  archive.c  archive.h  command.c  intern.h  list.c  main.c  util.c
cmd/ar/test/: CMakeLists.txt  ar_test.cpp
cmd/as/: CMakeLists.txt  Makefile  README.md  TODO.md  as.c  as.h  assemble.h  expr.c  lex.c  main.c  pass1.c  pass2.c  symtab.c  tables.c
cmd/as/test/: CMakeLists.txt  as_test.cpp
cmd/cc/: CMakeLists.txt  README.md  TODO.md  cc.c
cmd/cc/test/: CMakeLists.txt  cc_test.cpp
cmd/cpp/: CMakeLists.txt  README.md  TODO.md  buffer.c  cpp.c  defs.h  diag.c  direct.c  intern.h  macro.c  makefile  parser.c  scan.c  yylex.c
cmd/cpp/test/: CMakeLists.txt  cpp_harness.cpp  cpp_harness.h  cpp_test.cpp  test_conditional.cpp  test_include.cpp  test_limits.cpp  test_line_error_pragma.cpp  test_macro_object_function.cpp  test_paste.cpp  test_pragma_operator.cpp  test_predefined_macros.cpp  test_stringize.cpp  test_support.cpp  test_support.h  test_translation_phases.cpp  test_trigraphs.cpp  test_utf8_identifiers.cpp  test_varargs.cpp
cmd/disasm/: CMakeLists.txt  README.md  dis.c  disasm.h  main.c
cmd/disasm/test/: CMakeLists.txt  disasm_test.cpp
cmd/fsutil/: CMakeLists.txt  README.md  alloc.cpp  check.cpp  check.h  command.cpp  command.h  create.cpp  create.h  dir.cpp  dir.h  filesystem.h  fsutil.h  image.cpp  image.h  inode.cpp  inode.h  main.cpp  manifest.cpp  manifest.h  params.cpp  simh.cpp  simh.h  superblock.cpp  superblock.h
cmd/fsutil/test/: CMakeLists.txt  alloc_test.cpp  check_test.cpp  command_test.cpp  create_test.cpp  dir_test.cpp  inode_test.cpp  kernel_model_test.cpp  simh_test.cpp  superblock_test.cpp  word_test.cpp
cmd/ld/: CMakeLists.txt  Makefile  ar.c  intern.h  ld.c  ld.h  library.c  main.c  nm.c  output.c  pass1.c  pass2.c  ranlib.c  reloc.c  size.c  strip.c  symtab.c
cmd/ld/test/: CMakeLists.txt  ld_test.cpp
cmd/libaout/: CMakeLists.txt  README.md  arhdrsz.c  fgetarhdr.c  fgeth.c  fgethdr.c  fgetint.c  fgetran.c  fgetsym.c  fgetw.c  fputh.c  fputhdr.c  fputran.c  fputsym.c  fputw.c  getarhdr.c  getint.c  putarhdr.c  putint.c  shortaddr.c
cmd/libaout/test/: CMakeLists.txt  ar_test.cpp  fhdr_test.cpp  half_test.cpp  sym_test.cpp  word_test.cpp
cmd/lorder/test/: CMakeLists.txt  lorder_test.cpp
cmd/nm/: CMakeLists.txt  main.c  nm.c  nm.h
cmd/nm/test/: CMakeLists.txt  nm_test.cpp
cmd/ranlib/: CMakeLists.txt  main.c  ranlib.c  symdef.h
cmd/ranlib/test/: CMakeLists.txt  ranlib_test.cpp
cmd/sim/: CMakeLists.txt  arithmetic.cpp  assembler.cpp  besm6_arch.cpp  besm6_arch.h  extracode.cpp  machine.cpp  machine.h  main.cpp  memory.cpp  memory.h  processor.cpp  processor.h  session.cpp  session.h  syscall.cpp  trace.cpp
cmd/sim/test/: CMakeLists.txt  sim_test.cpp
cmd/size/: CMakeLists.txt  main.c  size.c  size.h
cmd/size/test/: CMakeLists.txt  size_test.cpp
cmd/strip/: CMakeLists.txt  main.c  strip.c  strip.h
cmd/strip/test/: CMakeLists.txt  strip_test.cpp
cross/: README.md  b.out.h
doc/: Aout_Simulator.md  Archiver_Manual.md  Assembler_Manual.md  Besm6_Calling_Conventions.md  Besm6_Data_Representation.md  Besm6_Instruction_Set.md  Besm6_Peripherals.md  Besm6_Runtime_Library.md  Context_Switch.md  Dubna_Context_Switch.md  File_Magic.md  Intrinsics.md  Kernel_Assembly_Routines.md  Linker_Manual.md  Memory_Mapping.md  Simh_Simulator.md  Unix_Context_Switch.md  Unix_V7_System_Calls.md
include/: README.md  a.out.h  ar.h  (+47 more)
kernel/: .gitignore  CMakeLists.txt  Makefile  TODO.md  acct.c  alloc.c  besm6.S  besm6.s  brz.s  clock.c  conf.c  const.s  fakemx.c  fio.c  iget.c  intr.c  machdep.c  main.c  malloc.c  mch.s  nami.c  pipe.c  prf.c  prim.c  psw.s  rdwri.c  seg.S  seg.s  sendsig.c  sig.c  slp.c  subr.c  switch.s  sys1.c  sys2.c  sys3.c  sys4.c  syscall.c  sysent.c  text.c  (+9 more)
kernel/conf/: mkconf.c
kernel/dev/: bio.c  cd.c  dsort.c  fd.c  hd.c  mb.c  md.c  mem.c  mx1.c  mx2.c  partab.c  pk0.c  pk1.c  pk2.c  pk3.c  sc.c  sr.c  sys.c  tty.c
kernel/test/: CMakeLists.txt  Makefile  biotest.c  biotest.ini  boot.ini.in  coninit.S  console.ini  crt0.s  crt0c.S  crt0g.S  crt0s.S  crt0sg.S  crt0t.S  crt0u.S  crt0u.s  crt0w.S  crt0w.s  fstest.c  fstest.ini  genboot.cmake  hello.ini  hello.s  mbtest.c  mbtest.ini  mdtest.c  mdtest.ini  mmuhelp.s  mmutest.c  mmutest.ini  root.manifest  sctest.c  sctest.ini  uclock.c  uclock.ini  ugrow.c  ugrow.ini  ugrp.c  ugrp.ini  uintr.c  uintr.ini  (+10 more)
lib/: CMakeLists.txt  Makefile  README.md  rules.mk
lib/libc/: CMakeLists.txt  Makefile
lib/libc/csu/: crt0.s
lib/libc/stdio/: clrerr.c  data.c  doprnt.c  doscan.c  endopen.c  fdopen.c  feof.c  ferror.c  fgetc.c  fgetpos.c  fgets.c  filbuf.c  findiop.c  flsbuf.c  fopen.c  fprintf.c  fputc.c  fputs.c  fread.c  freopen.c  fscanf.c  fseek.c  fsetpos.c  ftell.c  fwrite.c  gcvt.c  getc.c  getchar.c  getgrent.c  getgrgid.c  getgrnam.c  getpass.c  getpw.c  getpwent.c  getpwnam.c  getpwuid.c  gets.c  getw.c  popen.c  printf.c  (+24 more)
lib/libc/sys/: cerror.s  dup.S  dup.s  exec.S  exec.s  exece.S  exece.s  execl.c  execle.c  execv.c  exit.S  exit.s  fork.S  fork.s  getgid.S  getgid.s  getpid.S  getpid.s  getuid.S  getuid.s  mkstub  pipe.S  pipe.s  sbrk.c  syscalls.tbl  time.S  time.s  wait.S  wait.s  write.s
lib/libm/: CMakeLists.txt  Makefile  asin.c  atan.c  copysign.c  erf.c  exp.c  fabs.c  floor.c  fma.c  fmax.c  fmin.c  fmod.c  hypot.c  j0.c  j1.c  jn.c  log.c  pow.c  round.c  sin.c  sinh.c  sqrt.c  tan.c  tanh.c  trunc.c
lib/test/: CMakeLists.txt  Makefile  environ.c  environ.expected  errno.c  errno.expected  execs.c  execs.expected  gen.c  gen.expected  headers.c  headers.expected  hello.c  hello.expected  jmp.c  jmp.expected  malloct.c  malloct.expected  matht.c  matht.expected  printft.c  printft.expected  procs.c  procs.expected  pwent.c  pwent.expected  run-test.sh  sbrkt.c  sbrkt.expected  scanft.c  scanft.expected  signals.c  signals.expected  spawn.c  spawn.expected  stdiot.c  stdiot.expected  strings.c  strings.expected  timet.c  (+3 more)
(+46 files in other folders)
